media/gpu/v4l2 Fix input coded_size to request input buffer from client.

We currently use input VideoFrameLayout's coded_size to request input
buffer from client. However, we cannot correctly calcualte input buffer
size using VFL's coded_size as it does not consider padding and can
cause insufficient input buffer allocation.

Use coded_size calculated by V4L2Device::CodedSizeFromV4L2Format(format)
as parameter to call Client::RequireBitstreamBuffers can tentatively
solve the issue.

BUG=918088
TEST=Run VEA test on hana.

Change-Id: I9b17168884c3dc4699256f2248a79a1e1f7cce53
Reviewed-on: https://chromium-review.googlesource.com/c/1392699
Reviewed-by: Wu-Cheng Li <wuchengli@chromium.org>
Reviewed-by: Hirokazu Honda <hiroh@chromium.org>
Commit-Queue: Shuo-Peng Liao <deanliao@google.com>
Cr-Commit-Position: refs/heads/master@{#621072}
Former-commit-id: 8b3b147d1dda106428378474f87a56924f69651d